user registration login and new profile done

--- a/home/templates/home/homePage.html
+++ b/home/templates/home/homePage.html
@@ -25,8 +25,8 @@
 <! Animation end>
 
 <ui class="nav">
-    <li> <a href="#" class="badge">Register</a> </li>
-    <li> <a href={% url 'login_type' %} class="badge">Login</a> </li>
+    <li> <a href={% url 'register type' %} class="badge">Register</a> </li>
+    <li> <a href={% url 'login type' %} class="badge">Login</a> </li>
     <li> <a href="#" class="badge">Blog</a> </li>
     <li> <a href="#" class="badge">Contact</a> </li>
 </ui>
