--- a/user/static/user/base.css
+++ b/user/static/user/base.css
@@ -1,18 +1,16 @@
-#login-cont {
-	box-shadow: 0 4px 8px black;
-	max-width: 100vw;
+body {
+	padding: 0;
 }
 
-#instructor-cont {
-	width: calc(40vw - 15px);
-	height: 50vh;
-	min-width: 200px;
+body::-webkit-scrollbar {
+	display: none;
 }
 
-#student-cont {
-	width: calc(40vw - 15px);
-	height: 50vh;
-	min-width: 200px;
+.title {
+	margin-left: 2vw;
+	margin-top: 3vh;
+	margin-bottom: 5vh;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .nav {
@@ -32,29 +30,18 @@
 	display: none;
 }
 
-#login {
-	margin-left: 10vw;
-}
 #footer {
 	margin-top: 25px;
 	min-height: 20vh;
 	z-index: 3;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 900px) {
 	.display-2 {
 		font-size: 12vw;
 	}
 	.display-4 {
 		font-size: 8vw;
-	}
-	#login {
-	}
-	#student-cont {
-		height: auto;
-	}
-	#instructor-cont {
-		height: auto;
 	}
 	.nav {
 		top: 15px;
