--- a/user/templates/user/register_type.html
+++ b/user/templates/user/register_type.html
@@ -7,20 +7,23 @@
 
 {% block body %}
     <h2 id="login" class="display-4 text-secondary">Sign Up</h2>
-    <div class="container-fluid d-flex flex-row justify-content-center align-items-center p-2 bg-light" id="login_cont">
-    <div id="instructor-cont" class= "p-2 m-4   ">
+    <div class="container-fluid d-flex justify-content-center align-items-center p-2 bg-light" id="login-cont">
+    
+    <div id="element-cont" class= "p-2 m-4   ">
     <h1 class="display-4">Instructor</h1>
-    <p> Create quality study material and review you contents with the powerof AI.<br/></p>
+    <p> Create quality study material and review you contents with the power of AI.<br/></p>
     <a href={% url 'instructor register' %} class="btn btn-primary mt-2 pl-3 pr-3">Sign Up</a>
     <p class="mt-3">Already have an account? <a href= {% url 'instructor login' %}>Login </a>
     <br/><b>Contact sales</b> <a href= "#" > click here</a></p> 
     </div>
-    <div id="student-cont" class="p-2 m-4">
+
+    <div id="element-cont" class="p-2 m-4">
     <h1 class="display-4" >Student</h1>
     <p> Join the never ending learning pool powered by futuristic techs and latest contents</p>
     <a href={% url 'student register' %} class="btn btn-primary mt-2 pl-3 pr-3">Sign Up</a>
     <p class="mt-3">Already have an acount? <a href= {% url 'student login' %} >Login</a></p> 
     </div>
+
 </div>
 
 {% endblock body %}
